css/flatking.blue.css
/* ... */
.navbar-brand {
	line-height: 26px;
	padding: 12px 15px;
}
.navbar-inverse {
	border-color: #222;
}

.mymenu {
	position: absolute;
	z-index: 100;
	top: 0px;
	width: 100%;
	background:transparent;
	border-color: transparent;
	padding-top: 20px;
}

.navbar-inverse .navbar-nav>li>a,
.navbar-inverse .navbar-brand	{
	color: #FFF;
}
.navbar-inverse .navbar-nav>li>a:hover, 
.navbar-inverse .navbar-nav>li>a:focus,
.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus {
	color: #FAC928;
	background-color: transparent;
}

h4.media-heading {
	font-weight: 700;
}
.media>.pull-left {
	margin-right: 15px;
}

.navbar-inverse .navbar-nav>li>a.active,
.navbar-inverse .navbar-nav>.active>a:hover,
.navbar-inverse .navbar-nav>.active>a:focus {
	color: #FAC928;
	background-color: transparent;
}

/* ------------------------ price ---------------------- */
.section.section-pricing .panel-body {
	padding: 0;
}
.section.section-pricing .pricing-table tr td:first-child {
 
	background-color: #FFF;
}
.section.section-pricing .pricing-table table {
	margin: 0;
}
.section.section-pricing .panel-heading{
	background-color: #313a43;
	color: #FFF;
	border: none;
}
.section.section-pricing .panel-primary .panel-heading{
	background-color: #55c0ee;
}
.section-pricing .panel .panel-footer {
	background-color: #FFF;
}
.panel-footer .btn {
	margin-top: 10px;
}
.section-pricing .panel {
	border: none;
	border-radius: 5px;
}

/* ------------------------ team ----------------------*/
.thumbnail-badges {
	list-style: none;
	padding: 0;
	text-align: center;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
}
.thumbnail-badges .thumbnail {
	padding: 0;
	border: 0;
}
.thumbnail-badges img {
	border: 5px solid #55c0ee;
}
.caption h3{
	font-weight: 700;
}

/* ------------------------ home ----------------------*/
#home #myhead {
	overflow: hidden;
	background-size: cover;
	/*background-image: url("../img/head_bg3.jpg");*/
	/*background: -webkit-radial-gradient(closest-corner, rgba(16, 47, 70, 0) 60%, rgba(16, 47, 70, 0.26)), -webkit-linear-gradient(108deg, #5E8199, #153752 90%);*/
	background-position: center 16%;
	position: relative;
	padding: 136px 0 0 0;
}

/* ------------------------ buttons ----------------------*/
.btn-king {
	border: none;
	font-family: inherit;
	font-size: 16px;
	cursor: pointer;
	padding: 15px 30px;
	display: inline-block;
	margin: 0 10px 10px 0;
	text-transform: uppercase;
	text-decoration: none;
	letter-spacing: 1px;
	font-weight: 300;
	outline: none;
	position: relative;
	background: #55c0ee;
	color: #fff;
	border-radius: 5px;
	-webkit-transition:all .3s ease-out;
	-moz-transition:all .3s ease-out;
	transition:all .3s ease-out;
}
.btn-king:hover,
.btn-king:focus,
.btn-king:active {
	color: #fff;
	top: 0;
	text-decoration: none;
	background-color: #208897;
	box-shadow: none;
}
.btn-king.white {
	background: transparent;
	border:2px solid #fff;
	box-shadow: none;
	text-decoration: none;
	-webkit-transition:all .3s ease-out;
	transition:all .3s ease-out;
	padding: 13px 30px;
}
.btn-king.color {
	box-shadow: none;
	text-decoration: none;
	background-color: #F77F00;
}
.btn-error{
	background-color:	#F05557 !important;
}
.btn-king.dark {
	box-shadow: none;
	text-decoration: none;
	background-color: #313a43;
}
.btn-king.dark:hover,
.btn-king.dark:focus,
.btn-king.dark:active {
	top: 0;
	background-color: #1A1F23;
	text-decoration: none;
}
.btn-king.color:hover,
.btn-king.color:focus,
.btn-king.color:active {
	background: #fff;
	background-color: #f75b00;
	top:0;
	text-decoration: none;
}
.btn-king.white:hover,
.btn-king.white:focus,
.btn-king.white:active {
	background: #fff;
	color:#55c0ee;
	top:0;
	text-decoration: none;
}
.btn-king.icon-left	[class*=in]{
	margin-right:10px;
}
.btn-king.icon-right	[class*=in]{
	margin-left:10px;
}
.navbar-inverse .navbar-toggle {
	border: none;
}
.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
	background-color: #55c0ee;
}
.ico {
	display: inline-block;
	font-family: FontAwesome;
	font-style: normal;
	font-weight: normal;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}
.btn-king [class*=ico] {
	margin-right: 10px;
}
.btn-right {
	float: right;
	margin-right: 0;
}
/* ------------------------ Call to action ----------------------*/
.cta {
	padding: 50px 0 30px;
}
.cta .cta-message p {
	padding: 15px 0 20px;
	font-size:22px;
	line-height:32px;
}
.cta .cta-message strong {
	font-size: 24px;
	letter-spacing:0.02em;
}
.cta-button .btn-king{
	margin:0;
}

/* ------------------------ Skills ----------------------*/
.skills {
	margin-top:60px;
}
.chart {
	position: relative;
	display: inline-block;
	width: 140px;
	height: 140px;
	margin:50px 0;
	text-align: center;
}
.chart canvas {
	position: absolute;
	top: 0;
	left: 0;
}
.percent {
	display: inline-block;
	line-height: 140px;
	font-size:38px;
	font-weight:300;
	z-index: 2;
}
.percent:after {
	content: '%';
	margin-left: 0.1em;
	font-size: 50%;
}
.skills h2 {
	margin:0 0 80px;
	font-family: 'Lato', sans-serif;
	font-size:24px;
	font-weight:400;
}

/* ------------------------------ clients -------------------------- */
#clients a {
	display: block;
	text-align: center;
	margin-bottom: 30px;
}

/* ------------------------------ testimonial -------------------------- */
#testimonial {
	text-align: center;
	min-height: 450px;
}
.carousel-indicators {
	position: absolute;
	bottom: -15px;
	left: 50%;
	z-index: 15;
	width: 60%;
	padding-left: 0;
	margin-left: -30%;
	text-align: center;
	list-style: none
}
.carousel-indicators li {
	display: inline-block;
	width: 20px;
	height: 20px;
	margin: 0 5px 5px 5px;
	text-indent: -999px;
	cursor: pointer;
	border: 1px solid #fff;
	border-radius: 20px
}
.carousel-indicators li.active {
	width: 20px;
	height: 20px;
	 margin: 0 5px 5px 5px;
	background-color: #fff
}
/* ... */

